kubernetes/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngigo-web-deployment
spec:
  replicas: 3
  selector:
    matchLabels: 
        app: ngigo-web
    
  template:
    metadata:
      labels:
        app: ngigo-web
        pods-job: http-api
    spec:
      containers:
      - name: ngigo-web-app
        image: registry.sinabehmanesh.com/ngigo-web:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /errors
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 3

        resources:
          requests:
            memory: "64M"
            cpu: "250m"
          limits:
            memory: "128M"
            cpu: "500m"
