kubernetes/service.yml
---
apiVersion: v1 
kind: Service 
metadata:
  name: ngigo-web-service
spec:
  type: ClusterIP
  ports:
    - name: http-ngigo
      port: 8000
      targetPort: 8000
  selector:
    app: ngigo-web
