kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ngigo-web-ingress
  labels:
    name: ngigo-web-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: ngigo-web-service
            port:
              number: 8000
